<resources>
    <string name="app_name">KinopoiskPanov</string>
    <string name="enter_the_login">Enter the login</string>
    <string name="world_cinema">World Cinema</string>
    <string name="enter_the_password">Enter the password</string>
    <string name="Enter">Войти</string>
    <string name="register">Регистрация</string>
    <string name="capitanMarvel">Капитан Марвел</string>
    <string name="mainCine">Главное</string>
    <string name="hz">Подборка</string>
    <string name="collection">Коллекция</string>
    <string name="profil">Профиль</string>

    <string-array name="cat_names">
        <item>Рыжик</item>
        <item>Барсик</item>
        <item>Мурзик</item>
        <item>Мурка</item>
        <item>Васька</item>
        <item>Томасина</item>
        <item>Кристина</item>
        <item>Пушок</item>
        <item>Дымка</item>
        <item>Кузя</item>
        <item>Китти</item>
        <item>Масяня</item>
        <item>Симба</item>
    </string-array>
</resources>